--- a/templates/widget/package.json.mustache
+++ b/templates/widget/package.json.mustache
@@ -1,10 +1,8 @@
 {
   "name": "{{name}}",
-  "description": "{{title}} {{type}}",
-  "version": "0.0.0",
-  "author": "ForceManager",
+  "version": "0.0.1-alpha.1",
+  "author": "",
   "private": true,
-  "license": "MIT",
   "devDependencies": {
   },
   "dependencies": {
