scrips and styles in different files

--- a/templates/form/fmConfig.json.mustache
+++ b/templates/form/fmConfig.json.mustache
@@ -1,18 +1,5 @@
 {
-  "id": -1,
-  "implementationId": "{{implementation_id}}",
+  "name": "{{name}}",
   "type": "{{type}}",
-  "visible": true,
-  "deleted": false,
-  "description": "{{title}}",
-  "title": "{{title}}",
-  "titleBr": "{{title}}",
-  "titleDk": "{{title}}",
-  "titleRu": "{{title}}",
-  "titleDe": "{{title}}",
-  "titleEn": "{{title}}",
-  "titleFr": "{{title}}",
-  "titleIt": "{{title}}",
-  "titlePt": "{{title}}",
-  "titleUs": "{{title}}"
+  "distFolder": "dist"
 }
