--- a/templates/page/fmConfig.json.mustache
+++ b/templates/page/fmConfig.json.mustache
@@ -1,12 +1,5 @@
 {
-  "id": -1,
-  "implementationId": "{{implementation_id}}",
+  "name": "{{name}}",
   "type": "{{type}}",
-  "page": "{{title}}",
-  "web": {{web}},
-  "ios": {{ios}},
-  "android": {{android}},
-  "order": 1,
-  "visible": true,
-  "deleted": false
+  "distFolder": "dist"
 }
