--- a/templates/page/package.json.mustache
+++ b/templates/page/package.json.mustache
@@ -1,11 +1,22 @@
 {
   "name": "{{name}}",
-  "description": "{{title}} {{type}}",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.1",
   "author": "",
   "private": true,
-  "license": "MIT",
+  "scripts": {
+    "build": "webpack --env production",
+    "start": "webpack --env development && webpack-dev-server --env development --open --progress"
+  },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "cross-env": "^5.2.0",
+    "dotenv": "^7.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "yargs": "^13.2.2"
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
   }
