--- a/template/package.json.mustache
+++ b/template/package.json.mustache
@@ -13,7 +13,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "yargs": "^13.2.2"
+    "yargs": "^13.2.2",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
