--- a/src/styles.css
+++ b/src/styles.css
@@ -232,7 +232,7 @@ label#label-entity.error{
 .form {
     width: 100%;
     height: 100vh;
-    overflow: scroll;
+    overflow: hidden;
     display: none;
 }
 .form-header {
