--- a/src/styles.css
+++ b/src/styles.css
@@ -288,6 +288,50 @@ label#label-implementation.error {
 .form-camera-images.show + .form-content {
   height: calc(100% - 80px);
 }
+.form-template {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  top: 0;
+}
+.form-template.show {
+  display: flex;
+}
+.form-template form {
+  display:flex;
+  justify-content: center;
+  font-size: 13px;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #5f656b;
+}
+.form-template__label{
+  margin-right: 17px;
+}
+/* .form-template__selector{
+  display: flex;
+  align-items: center;
+  border: none !important;
+  background-color: transparent;
+  box-shadow: none;
+} */
+select {
+  font-size: 14px;
+  padding: 5px;
+  box-sizing: border-box;
+  background: none;
+  border: none;
+  border-bottom: 1px solid #d1d1d1;
+}
+option {
+  list-style:none;
+  border:none;
+  background-color:transparent;
+  box-shadow:0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
 .page {
   width: 100%;
   height: calc(100vh - 40px);
